# uos-kernel

./: .gitignore  .gitmodules  ARCHITECTURE.md  CIM_Rules.owl  COMPONENTS.md  Makefile  ONTOLOGY_MANAGEMENT.md  README.md  VISUALIZATION.md  progress.md  requirements.txt
.agent/: ai_rules.md
actor/: README.md  actor.go  actor_ref.go  base_resource_actor.go  binding.go  capacity.go  event.go  event_descriptor.go  go.mod  message.go  resource_actor.go  snapshot.go  system.go
actors/: .gitignore  README.md  actor.go  actor_ref.go  actor_ref_test.go  actor_test.go  base_resource_actor.go  binding.go  capacity_factory.go  cim_resource_actor.go  event_descriptor.go  events.go  go.mod  go.sum  messages.go  property_mapper.go  resource_actor.go  resource_actor_test.go  runtime_context.go  snapshot.go  system.go
app/: app.go  go.mod  helpers.go
cim/: parse_cim_equipment.py
docs/: actors_system_discussion_20251209.md  cim_ontology_discussion_20250115.md  cim_ontology_discussion_20251209.md  cimpyorm_fullgrid_analysis_20250109.md  cimpyorm_fullgrid_analysis_20251209.md  design_review.md  development_summary_20251216.md  development_summary_20251217.md  development_summary_20251218.md  next_steps_actor_cim_digital_twin.md  posix_resource_service_layer_20251210.md
infra/: USAGE.txt  beeline.sh  docker-compose.yml  spark-defaults.conf
kernel/: README.md  cim_converter.go  example_test.go  go.mod  kernel.go  loader.go  (+6 more)
sdk/python/: pyproject.toml
sdk/python/examples/: substation_maintenance.py
sdk/python/uos_kernel/: __init__.py  client.py  helpers.py  process.py
(+139 files in other folders)
